Using selenium for new ReCaptcha.py
1) In CaptchaManager set the path to the geckodriver
2) In Api.py in the method addInteractiveCaptchaTask set a website which does not contain any iframes, except the ones that recaptcha adds dynamically
3) Call https://127.0.0.1:8000/json/add_interactive_task to add a task to solve the captcha of the website you added in the previous step

--- a/module/web/templates/pyplex/captcha.html
+++ b/module/web/templates/pyplex/captcha.html
@@ -5,9 +5,9 @@
     <!-- Modal content-->
     <div class="modal-content">
       <div class="modal-header bg-info navbar-inverse text-center" style="padding: 5px" >{{_('Captcha reading')}}</div>
-        <div class="modal-body text-left">
-          <div id="cap_title"></div>
-         <form id="cap_form" class="form-group" action="{{'/json/set_captcha'|url}}" method="POST" enctype="multipart/form-data" onsubmit="return false;" style="margin-bottom: 40px;">
+      <div class="modal-body text-left">
+      <div id="cap_title"></div>
+        <form id="cap_form" class="form-group" action="{{'/json/set_captcha'|url}}" method="POST" enctype="multipart/form-data" onsubmit="return false;" style="margin-bottom: 40px;">
           <div id="cap_textual">
             <input id="cap_id" name="cap_id" type="hidden" value=""/>
             <div class="form-group">
@@ -24,6 +24,10 @@
           <div id="cap_positional" style="text-align: center">
               <img id="cap_positional_img" src="" style="margin: 10px; cursor:pointer">
             <div class="small">{{_('Please click on the right captcha position.')}}</div>
+          </div>
+
+          <div id="cap_selenium" style="text-align: center">
+            <div id="cap_selenium_content" data-id=""></div>
           </div>
           <button class="btn btn-success pull-right" id="cap_submit" type="submit" style="margin-left: 5px;">{{_('Submit')}}</button>
           <div class="btn btn-warning pull-right" data-dismiss="modal" id="cap_reset" >{{_('Close')}}</div>
