--- a/module/web/media/pyplex/css/styles.css
+++ b/module/web/media/pyplex/css/styles.css
@@ -387,6 +387,12 @@ textarea.form-control:focus {
   border-top: none;
 }
 
+.modal-dialog {
+    display: flex;
+    width: initial;
+    justify-content: center;
+}
+
 .btn-form {
   padding: 4px 12px;
   margin: 5px 0 5px 0;
