--- a/module/web/templates/pyplex/captcha.html
+++ b/module/web/templates/pyplex/captcha.html
@@ -31,8 +31,10 @@
 
           <div id="cap_selenium" style="display: none;">
             <div id="cap_selenium_content" data-id=""></div>
+            <div id="cap_selenium_overlay"></div>
           </div>
           <button class="btn btn-success pull-right" id="cap_submit" type="submit" style="margin-left: 5px;">{{_('Submit')}}</button>
+          <div class="btn btn-info pull-right" id="cap_reload" >{{_('Reload')}}</div>
           <div class="btn btn-warning pull-right" data-dismiss="modal" id="cap_reset" >{{_('Close')}}</div>
         </form>
       </div>
